--- a/less/header.less
+++ b/less/header.less
@@ -627,6 +627,7 @@
                     display: block;
                     float: left;
                     margin-right: 70px;
+                    line-height: 22px;
                     .clear-link-style;
                     color: @ice-blue;
                     &:hover{
@@ -635,6 +636,7 @@
                     .icon-search{
                         font-weight: normal;
                         font-size: @font-size-large; 
+                        line-height: 22px;
                     }    
                 }                   
             }
@@ -890,12 +892,18 @@
             .portal-link{
                 position: absolute;
                 right: 20px;
-                top: 10px;
+                top: 21px;
                 margin-left: 0;
                 margin-right: 0;
                 padding-left: 0;
                 padding-right: 0;
                 background-color: inherit;
+                line-height: 24px;
+                border-top: 0;
+                .icon-portal{
+                    line-height: 24px;
+                    height: 24px;
+                }
             }  
         }
         .search-panel{
